<resources>
    <string name="app_name">My Application</string>
    <string name="logbtn">로그인</string>
    <string name="SignUp">회원가입</string>
    <string name="Id">ID</string>
    <string name="Pw">Password</string>
    <string name="Name">이름</string>
    <string name="Phone">전화번호</string>
    <string name="Address">주소</string>
    <string name="YG">약관 \n이 앱에서 개인정보 사용에 있어서 책임은 전적으로 이용자한테 있습니다. 개발자한테 책임을 묻지 마세요.</string>
    <string name="YGagree">동의</string>
    <string name="YGDisagree">비동의</string>
</resources>
